samples/_failures_safe/1761403084_ee266c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92147592.c: In function ‘main’:
./samples/SAFE/__tmp_92147592.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Matrix addition successful:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_92147592.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92147592.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92147592.c:150:21: error: expected declaration or statement at end of input
